generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Plan {
  FREE
  PRO
  BUSINESS
}

/// Utilisateur SUPFile (compte standard ou OAuth).
model User {
  id           String   @id @default(uuid()) @db.Uuid
  email        String   @unique
  passwordHash String?  @map("password_hash")
  displayName  String   @map("display_name")
  avatarUrl    String?  @map("avatar_url")
  usedSpace    BigInt   @default(0) @map("used_space")
  plan         Plan     @default(FREE)
  planUpdatedAt DateTime @default(now()) @map("plan_updated_at")

  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  oauthAccounts OAuthAccount[]
  folders       Folder[]
  files         File[]
  shareLinks    ShareLink[]
  outgoingFolderShares FolderShare[] @relation("FolderShareFrom")
  incomingFolderShares FolderShare[] @relation("FolderShareTo")

  @@map("users")
}

/// Compte OAuth lié à un User (un user peut avoir plusieurs comptes OAuth)
model OAuthAccount {
  id         String   @id @default(uuid()) @db.Uuid
  provider   String
  providerId String   @map("provider_id")
  userId     String   @map("user_id") @db.Uuid

  createdAt  DateTime @default(now()) @map("created_at")

  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerId])
  @@index([userId])
  @@map("oauth_accounts")
}

/// Dossier dans l'arborescence. parentId=null = racine du user.
model Folder {
  id        String    @id @default(uuid()) @db.Uuid
  name      String
  parentId  String?   @map("parent_id") @db.Uuid
  ownerId   String    @map("owner_id") @db.Uuid

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  owner    User     @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  parent   Folder?  @relation("FolderHierarchy", fields: [parentId], references: [id], onDelete: Restrict)
  children Folder[] @relation("FolderHierarchy")
  files    File[]
  shares   FolderShare[]

  @@index([ownerId, parentId])
  @@index([ownerId, deletedAt])
  @@map("folders")
}

/// Fichier physique. storagePath est opaque, généré par StorageService.
model File {
  id          String    @id @default(uuid()) @db.Uuid
  name        String
  size        BigInt
  mimeType    String    @map("mime_type")
  storagePath String    @map("storage_path")
  folderId    String?   @map("folder_id") @db.Uuid
  ownerId     String    @map("owner_id") @db.Uuid

  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")
  deletedAt   DateTime? @map("deleted_at")

  owner  User    @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  folder Folder? @relation(fields: [folderId], references: [id], onDelete: Restrict)
  shareLinks ShareLink[]

  @@index([ownerId, folderId])
  @@index([ownerId, deletedAt])
  @@index([ownerId, name])
  @@map("files")
}

/// Partage d'un dossier entre deux users de la plateforme (lecture seule).
model FolderShare {
  id         String   @id @default(uuid()) @db.Uuid
  folderId   String   @map("folder_id") @db.Uuid
  fromUserId String   @map("from_user_id") @db.Uuid
  toUserId   String   @map("to_user_id") @db.Uuid
  createdAt  DateTime @default(now()) @map("created_at")

  folder   Folder @relation(fields: [folderId], references: [id], onDelete: Cascade)
  fromUser User   @relation("FolderShareFrom", fields: [fromUserId], references: [id], onDelete: Cascade)
  toUser   User   @relation("FolderShareTo", fields: [toUserId], references: [id], onDelete: Cascade)

  @@unique([folderId, toUserId])
  @@index([toUserId])
  @@index([fromUserId])
  @@map("folder_shares")
}

/// Lien de partage public d'un fichier (token aleatoire).
/// passwordHash optionnel, expiresAt optionnel. revokedAt si revoque.
model ShareLink {
  id           String    @id @default(uuid()) @db.Uuid
  token        String    @unique
  fileId       String    @map("file_id") @db.Uuid
  ownerId      String    @map("owner_id") @db.Uuid
  passwordHash String?   @map("password_hash")
  expiresAt    DateTime? @map("expires_at")
  revokedAt    DateTime? @map("revoked_at")
  downloads    Int       @default(0)

  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  file  File @relation(fields: [fileId], references: [id], onDelete: Cascade)
  owner User @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  @@index([ownerId])
  @@index([fileId])
  @@map("share_links")
}
