classDiagram
    class User {
        +UUID id
        +string email
        +string passwordHash
        +string displayName
        +string avatarUrl
        +bigint usedSpace
        +Plan plan
        +DateTime planUpdatedAt
        +DateTime createdAt
        +DateTime updatedAt
    }

    class OAuthAccount {
        +UUID id
        +string provider
        +string providerId
        +UUID userId
        +DateTime createdAt
    }

    class Folder {
        +UUID id
        +string name
        +UUID parentId
        +UUID ownerId
        +DateTime createdAt
        +DateTime updatedAt
        +DateTime deletedAt
    }

    class File {
        +UUID id
        +string name
        +bigint size
        +string mimeType
        +string storagePath
        +UUID folderId
        +UUID ownerId
        +DateTime createdAt
        +DateTime updatedAt
        +DateTime deletedAt
    }

    class ShareLink {
        +UUID id
        +string token
        +UUID fileId
        +UUID ownerId
        +string passwordHash
        +DateTime expiresAt
        +DateTime revokedAt
        +int downloads
        +DateTime createdAt
        +DateTime updatedAt
    }

    class Plan {
        <<enumeration>>
        FREE
        PRO
        BUSINESS
    }

    User "1" --> "*" OAuthAccount : possède
    User "1" --> "*" Folder : possède
    User "1" --> "*" File : possède
    User "1" --> "*" ShareLink : émet
    User --> Plan : a un
    Folder "0..1" --> "*" Folder : parent / enfants
    Folder "0..1" --> "*" File : contient
    File "1" --> "*" ShareLink : partagé via
